<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.curiouswizard.myvirtuallibrary.ui.ListFragment"
        android:label="@string/my_library"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_addFragment"
            app:destination="@id/addFragment" />
        <action
            android:id="@+id/to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/addFragment"
        android:name="com.curiouswizard.myvirtuallibrary.ui.AddFragment"
        android:label="@string/add_new_book"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.curiouswizard.myvirtuallibrary.ui.DetailFragment"
        android:label="@string/your_book_details"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/to_editFragment"
            app:destination="@id/editFragment" />
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/editFragment"
        android:name="com.curiouswizard.myvirtuallibrary.ui.EditFragment"
        android:label="@string/edit_book"
        tools:layout="@layout/fragment_edit" >
        <argument
            android:name="selectedBook"
            app:argType="com.curiouswizard.myvirtuallibrary.model.Book" />
    </fragment>
</navigation>